kubernetes/k8s.yaml

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: wildwest
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wildwest
  template:
    metadata:
      labels:
        app: wildwest
    spec:
      terminationGracePeriodSeconds: 0
      containers:
      - name: wildwest
        image: ibmcloudacademy/wildwest:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: wildwest
  labels:
    app: wildwest
spec:
  type: NodePort
  ports:
    - name: wildwest
      port: 8080
  selector:
    app: wildwest
