kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wildwest
  namespace: wildwest
  labels:
    app: wildwest
spec:
  type: ClusterIP
  ports:
    - name: wildwest
      port: 8080
  selector:
    app: wildwest
